# matrslab

./: Cargo.toml  README.MD
.github/workflows/: ci.yml
docs/repl/: help.txt  repl.md
src/: lib.rs  main.rs
src/attitude/: dcm.rs  euler.rs  mod.rs  quaternion.rs  rotation.rs
src/attitude/tests/: dcm_tests.rs  euler_tests.rs  mod.rs  quaternion_tests.rs  test_utils.rs
src/coordinate/: cartesian.rs  cylindrical.rs  mod.rs  polar.rs  spherical.rs
src/coordinate/tests/: mod.rs
src/math/: macros.rs  matrix.rs  mod.rs  vector.rs
src/math/tests/: matrix.rs  mod.rs  vector.rs
src/numerical_methods/integration/: euler.rs  mod.rs  rk4.rs  trapezoidal.rs
src/reference_frame/: body.rs  mod.rs  traits.rs
src/rotation/: dcm.rs  euler.rs  mod.rs  quaternion.rs
src/rotation/tests/: dcm_tests.rs  euler_tests.rs  mod.rs  quaternion_tests.rs  test_utils.rs
src/utils/: angle_conversion.rs  macros.rs  mod.rs  parse.rs  repl.rs
