[package]
name = "matrslab"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
no_std = []
repl = ["rustyline", "regex"]



[dependencies]
num-traits = "0.2"
rustyline = { version = "13", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"
