[package]
name = "matrslab"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
no_std = []
repl = ["rustyline", "regex"]

[lib]
crate-type=["rlib", "staticlib", "cdylib"]

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release.build-override]
opt-level = "s"
codegen-units = 256

[dependencies]
num-traits = "0.2"
rustyline = { version = "13", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"
rustfmt = "*"